# fabricaPI

./: .gitignore  Apresentação.py  Hello.py  LICA_2016_teste.csv  Procfile  README.md  __init__.py  pyproject.toml  requirements.txt  teste.py  utils.py
.devcontainer/: devcontainer.json
assets/csv/: example_sistec.csv  example_sistec2.csv  example_trancados.csv
manager/: chart_manager.py  config.py  dataframe_manager.py
options/: filters.py
pages/: 0_Carregar_Arquivos.py  1_Gerar Relatório.py  1_Gráfico.py  1_Gráficos.py  1_Relatório_de_Resultado.py  2_DataFrames.py  3_Resultado.py  3_Resultado_antigo.py  4_Resultado_novo.py  pyproject.toml
pages/tests/: 1_Gráficos.py  2_DataFrames.py  2_Gráficos.py  3_Resultado_antigo.py  Relatório_de_Resultado_1.1.py  Relatório_de_Resultado_1.2.py  index.py
