[project]
name = ""
version = ""
description = ""
authors = [
    {name = "mateus-lopes", email = "mateusalbano22@gmail.com"},
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "pydeck>=0.8.0",
    "streamlit>=1.32.2",
    "matplotlib>=3.8.3",
    "plotly>=5.20.0",
    "scikit-learn>=1.4.1.post1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

